# Orch

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  docker-compose.yml  package.json  pnpm-lock.yaml
.github/: PULL_REQUEST_TEMPLATE.md
apps/orch-broker/: Cargo.toml  Dockerfile
apps/orch-broker/src/: error.rs  lib.rs  main.rs
apps/orch-broker/src/config/: mod.rs  system_config.rs
apps/orch-broker/src/handlers/: deploy.rs  external_workers.rs  jobs.rs  metrics.rs  mod.rs  nodes.rs  test.rs  workers.rs
apps/orch-broker/src/middlewares/: api_key_auth.rs  idempotency.rs  ip_filter.rs  logging.rs  mod.rs  pii_masking.rs  quota.rs  request_size_limit.rs  security_headers.rs
apps/orch-broker/src/models/: mod.rs
apps/orch-broker/src/routes/: execute.rs  mod.rs
apps/orch-broker/src/sdk/: audit_resolver.rs  context.rs  mod.rs  registry.rs
apps/orch-broker/src/sdk/handlers/: action.rs  extract.rs  integration.rs  logic.rs  mod.rs  output.rs  trigger.rs
apps/orch-broker/src/services/: api_resolver.rs  audit_event_consumer.rs  circuit_breaker.rs  config_manager.rs  db_config.rs  db_pool_manager.rs  flow_executor.rs  flow_executor_sdk.rs  flow_resolver.rs  jwt_validator.rs  kafka.rs  kafka_admin.rs  kafka_pipeline.rs  mod.rs  mq.rs  route_cache.rs  worker_consumer.rs  worker_manager.rs  worker_registry.rs  xpath_extractor.rs
apps/orch-broker/src/utils/: mod.rs
apps/orch-broker/tests/: test_flow_execution.rs  test_pub_sub.rs
docs/: ARCHITECTURE.md  ASYNC_RESPONSE_GUIDE.md  LOCAL-DEV.md  (+6 more)
(+269 files in other folders)
